# conference-scraper

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  conference_talks.db  main.py  pyproject.toml
.github/workflows/: scrape-data.yml
data/: conference_talks_no_text.db
src/conference_scraper/: __init__.py  cli.py  config.py  database.py  main.py  models.py  scraper.py  topic_extractor.py
